roles/openshift-apps/monitor-dashboard/files/datagrepper_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: datagrepper
  labels:
    app: datagrepper
spec:
  selector:
    app: datagrepper
    service: datagrepper
  ports:
  - name: datagrepper
    port: 8080
    targetPort: 8080
