roles/openshift-apps/monitor-dashboard/files/postgrest_service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgrest
  labels:
    app: postgrest
spec:
  selector:
    app: postgrest
    service: postgrest
  ports:
  - name: postgrest
    port: 8080
    targetPort: 3000
