roles/openshift-apps/monitor-dashboard/files/prest_service.yml
apiVersion: v1
kind: Service
metadata:
  name: prest
  labels:
    app: prest
spec:
  selector:
    app: prest
    service: prest
  ports:
  - name: prest
    port: 8080
    targetPort: 3000
