roles/openshift-apps/monitor-dashboard/files/service.yml
apiVersion: v1
kind: Service
metadata:
  name: monitor-dashboard-web
  labels:
    app: dashboard
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: grafana-tls
spec:
  selector:
    app: monitor-dashboard
    service: web
  ports:
  - name: web
    port: 8443
    targetPort: 8443
