roles/openshift-apps/monitor-dashboard/files/datagrepper_route.yml
---
apiVersion: v1
kind: Route
metadata:
  name: datagrepper
  labels:
    app: datagrepper
spec:
  # host: waiverdb.stg.fedoraproject.org
  port:
    targetPort: datagrepper
  to:
    kind: Service
    name: datagrepper
  tls:
    termination: Edge
    insecureEdgeTerminationPolicy: Redirect
