roles/openshift-apps/monitor-dashboard/files/postgrest_route.yml
apiVersion: v1
kind: Route
metadata:
  name: postgrest
  labels:
    app: postgrest
spec:
  #host: waiverdb.stg.fedoraproject.org
  port:
    targetPort: postgrest
  to:
    kind: Service
    name: postgrest
  tls:
    termination: Edge
    insecureEdgeTerminationPolicy: Redirect
