roles/openshift-apps/monitor-dashboard/files/prest_route.yml
apiVersion: v1
kind: Route
metadata:
  name: prest
  labels:
    app: prest
spec:
  #host: waiverdb.stg.fedoraproject.org
  port:
    targetPort: prest
  to:
    kind: Service
    name: prest
  tls:
    termination: Edge
    insecureEdgeTerminationPolicy: Redirect
