roles/openshift-apps/monitor-dashboard/files/route.yml
apiVersion: v1
kind: Route
metadata:
  name: monitor-dashboard
  labels:
    app: monitor-dashboard
spec:
  #host: waiverdb.stg.fedoraproject.org
  port:
    targetPort: web
  to:
    kind: Service
    name: monitor-dashboard-web
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
